@@ -35,8 +35,9 @@
 
 # Add the stdlib C files to the build
 
-CSRCS += lib_abs.c lib_abort.c lib_div.c lib_imaxabs.c lib_itoa.c lib_labs.c
-CSRCS += lib_llabs.c lib_rand.c lib_qsort.c
+CSRCS += lib_abs.c lib_abort.c lib_div.c lib_ldiv.c lib_lldiv.c
+CSRCS += lib_imaxabs.c lib_itoa.c lib_labs.c lib_llabs.c
+CSRCS += lib_rand.c lib_qsort.c
 CSRCS += lib_strtol.c lib_strtoll.c lib_strtoul.c lib_strtoull.c
 CSRCS += lib_strtod.c lib_checkbase.c
 
